--- a/css/global.css
+++ b/css/global.css
@@ -32,11 +32,9 @@ body { display: none; }
   background-color: skyblue;
   background-repeat: no-repeat;
   background-size: contain;
-  position: absolute;
   height: 400px;
   width: 100%;
   z-index: 1;
-  position: fixed;
 }
 
 .heroimg {
@@ -46,13 +44,36 @@ body { display: none; }
   z-index: -1;
 }
 
+h1 {
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
+  font-size: 1.2em;
+  line-height: 2em;
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: lightgrey;
+  text-align: center;
+
+}
+
+h2 {
+  font-family: 'Tinos', 'Times New Roman', serif;
+  font-size: 1.2em;
+  /*font-style: italic;*/
+  letter-spacing: 0.1em;
+  font-weight: normal;
+  text-align: center;
+  color: lightgrey;
+  line-height: 2em;
+
+}
 h3 {
   font-family: 'Tinos', 'Times New Roman', serif;
   font-size: 0.9em;
   text-transform: uppercase;
   letter-spacing: 0.4em;
   color: lightgrey;
-  font-weight: 200;
+  font-weight: 600;
   text-align: center;
   padding: 5px;
 }
@@ -71,15 +92,44 @@ h4 {
 .byline {
   z-index: 99999;
   vertical-align: center;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-top: 25%;
   font-family: 'Tinos', 'Helvetica', sans-serif;
-  font-style: italic;
-  color: white;
+  /*font-style: italic;*/
+  color: lightgrey;
   font-size: 1.5em;
-  position: absolute;
   font-weight: 600;
   letter-spacing: 2px;
   text-align: center;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 20px;
 }
+
+.container {
+  height: 1500px;
+  width: 100%;
+}
+
+.wrapper1 {
+  width: 60%;
+  margin-left: 10%;
+  margin-right: 10%;
+  font-family: 'Tinos', 'Times New Roman', sans-serif;
+  color: grey;
+  font-size: 1em;
+  line-height: 1.5em;
+  font-weight: 200;
+  letter-spacing: 1px;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 35px;
+
+}
+
+/*hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: lightgrey;
+  background-color: lightgrey;
+  height: 1px;
+}*/
