--- a/css/nav.css
+++ b/css/nav.css
@@ -28,10 +28,13 @@
   display: none;
 }
 #cssmenu {
-  font-family: Montserrat, sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 0.3em;
+  font-weight: 200;
+  font-size: 1em;
   background-color: white;
-  width: 70%;
-  margin-left: 20%;
+  width: 75%;
+  margin-left: 21%;
   margin-right: 15%;
   z-index: 99999;
 }
@@ -54,15 +57,22 @@
 }
 #cssmenu > ul > li > a {
   padding: 17px;
-  font-size: 12px;
-  letter-spacing: 1px;
-  text-decoration: none;
+  font-size: 0.6em;
+  letter-spacing: 0.4em;
   color: #dddddd;
-  font-weight: 700;
+  font-weight: 200;
   text-transform: uppercase;
+  text-decoration: none;
 }
 #cssmenu > ul > li:hover > a {
   color: #ffffff;
+  background-color: #A8D5E2;
+  -webkit-transition: all .45s ease;
+  -moz-transition: all .45s ease;
+  -ms-transition: all .45s ease;
+  -o-transition: all .45s ease;
+  transition: all .45s ease;
+
 }
 #cssmenu > ul > li.has-sub > a {
   padding-right: 30px;
@@ -130,14 +140,15 @@
   margin-right: 100%;
 }
 #cssmenu ul ul li a {
-  border-bottom: 1px solid rgba(150, 150, 150, 0.15);
+  border-bottom: 1px solid white;
   padding: 11px 15px;
   width: 170px;
-  font-size: 12px;
-  text-decoration: none;
+  font-size: 0.6em;
   color: #dddddd;
-  font-weight: 400;
-  background: #333333;
+  font-weight: 200;
+  background: white;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 #cssmenu ul ul li:last-child > a,
 #cssmenu ul ul li.last-item > a {
@@ -146,6 +157,14 @@
 #cssmenu ul ul li:hover > a,
 #cssmenu ul ul li a:hover {
   color: #ffffff;
+  background-color: #A8D5E2;
+  border-bottom: 1px solid #A8D5E2;
+  -webkit-transition: all .45s ease;
+  -moz-transition: all .45s ease;
+  -ms-transition: all .45s ease;
+  -o-transition: all .45s ease;
+  transition: all .45s ease;
+
 }
 #cssmenu ul ul li.has-sub > a:after {
   position: absolute;
