--- a/css/global.css
+++ b/css/global.css
@@ -45,26 +45,28 @@ body { display: none; }
 }
 
 h1 {
-  font-family: 'Open Sans', 'Helvetica', sans-serif;
-  font-size: 1.2em;
-  line-height: 2em;
-  letter-spacing: 0.4em;
-  text-transform: uppercase;
+  font-family: 'Tinos', 'Times New Roman', serif;
+  font-size: 2.5em;
+  /*line-height: 3em;*/
+  letter-spacing: 0.1em;
+  text-transform: none;
+  /*font-style: italic;*/
   font-weight: 600;
-  color: lightgrey;
+  color: #A8D5E2;
   text-align: center;
 
 }
 
 h2 {
-  font-family: 'Tinos', 'Times New Roman', serif;
-  font-size: 1.2em;
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
+  font-size: 0.7em;
   /*font-style: italic;*/
-  letter-spacing: 0.1em;
+  letter-spacing: 0.4em;
   font-weight: normal;
+  text-transform: uppercase;
   text-align: center;
   color: lightgrey;
-  line-height: 2em;
+  /*line-height: 2em;*/
 
 }
 h3 {
@@ -106,7 +108,7 @@ h4 {
 }
 
 .container {
-  height: 1500px;
+  height: 100%;
   width: 100%;
 }
 
@@ -126,6 +128,72 @@ h4 {
 
 }
 
+.leftwrap1 {
+  width: 50%;
+  /*margin: 5%;*/
+  margin-top: 3%;
+  margin-left: 12%;
+  height: 50%;
+  /*background-color: moccasin;*/
+  outline: solid 1pt moccasin;
+  float: left;
+}
+
+.rightwrap1 {
+  width: 25%;
+  margin-right: 12%;
+  margin-top: 3%;
+  /*margin: 5%;*/
+  outline: solid 1pt moccasin;
+  height: 50%;
+  /*background-color: papayawhip;*/
+  float: right;
+}
+
+.welcome1 {
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 3%;
+  /*margin-bottom: 2%;*/
+  /*background-color: skyblue;*/
+  /*outline: solid 1pt moccasin;*/
+  height: 7%;
+  float: left;
+}
+a {
+  text-decoration: none;
+  color: lightgrey;
+}
+
+a:hover {
+  text-decoration: underline;
+  font-weight: bolder;
+  color: #A8D5E2;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+}
+.footer {
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 3%;
+  margin-bottom: 1%;
+  /*background-color: skyblue;*/
+  height: 8%;
+  float: left;
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
+  font-size: 0.6em;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+  text-align: center;
+  color: lightgrey;
+  line-height: 1.8em;
+}
 /*hr {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -133,3 +201,7 @@ h4 {
   background-color: lightgrey;
   height: 1px;
 }*/
+
+.footer-rule {
+	border-top: 1px dashed #A8D5E2;
+}
