--- a/css/global.css
+++ b/css/global.css
@@ -144,7 +144,7 @@ h4 {
   margin-right: 12%;
   margin-top: 3%;
   /*margin: 5%;*/
-  outline: solid 1pt moccasin;
+  /*outline: solid 1pt moccasin;*/
   height: 50%;
   /*background-color: papayawhip;*/
   float: right;
