--- a/css/global.css
+++ b/css/global.css
@@ -140,13 +140,14 @@ h4 {
 }
 
 .rightwrap1 {
-  width: 25%;
+  width: 175px;
   margin-right: 12%;
   margin-top: 3%;
   /*margin: 5%;*/
   /*outline: solid 1pt moccasin;*/
-  height: 50%;
-  /*background-color: papayawhip;*/
+  height: 175px;
+  border-radius: 50%;
+  background-color: #A8D5E2;
   float: right;
 }
 
