--- a/css/global.css
+++ b/css/global.css
@@ -141,7 +141,7 @@ h4 {
 
 .rightwrap1 {
   width: 175px;
-  margin-right: 12%;
+  margin-right: 18%;
   margin-top: 3%;
   /*margin: 5%;*/
   /*outline: solid 1pt moccasin;*/
@@ -214,4 +214,11 @@ p {
 
 .footer-rule {
 	border-top: 1px dashed #A8D5E2;
+}
+
+.social-footer {
+  width: 100%;
+  height: 100px;
+  background-color: #a8d5e2;
+  float: left;
 }
