--- a/css/global.css
+++ b/css/global.css
@@ -39,6 +39,7 @@ body { display: none; }
   margin-left: 15%;
   margin-right: 15%;
   z-index: 1;
+  position: relative;
 }
 
 .heroimg {
@@ -46,6 +47,7 @@ body { display: none; }
   width: 100%;
   object-fit: cover;
   z-index: -1;
+  position: absolute;
 }
 
 h1 {
@@ -71,8 +73,8 @@ h2 {
   text-align: center;
   color: lightgrey;
   /*line-height: 2em;*/
-
 }
+
 h3 {
   font-family: 'Tinos', 'Times New Roman', serif;
   font-size: 0.9em;
@@ -93,6 +95,18 @@ h4 {
   font-weight: 100;
   text-align: center;
   padding: 2px;
+}
+
+h5 {
+  font-family: 'Open Sans', 'Helvetica', sans-serif;
+  font-size: 0.8em;
+  /*font-style: italic;*/
+  letter-spacing: 0.5em;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  color: gray;
+  /*line-height: 2em;*/
 }
 
 .container {
@@ -181,38 +195,103 @@ p {
     text-align: center;
 }
 
-.slideshow{
+/*.left-1{
     margin-left: 10%;
     height: 500px;
     background-color: skyblue;
-    width: 25%;
+    width: 20%;
     float:left;
     background-size: contain;
-    position: relative;
 }
 
-.slidecontain {
+.leftcontain {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    position: absolute;
-}
+}*/
 
-.slideshow > div >img {
-    position: absolute;
-}
 
 .left-2{
-    height:500px;
-    background-color: aquamarine;
-    width:35%;
+    height:100%;
+/*    background-color: gray;*/
+    width:40%;
     float: left;
+    margin-left: 20%;
+}
+
+.textpad {
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .right-1{
-    margin-right: 10%;
-    height: 500px;
-    background-color: azure;
+    margin-right: 20%;
+    height: 100%;
+/*    background-color: azure;*/
     width: 20%;
     float: right;
+}
+
+.circle {
+    background-color: #A8D5E2;
+    border-radius: 50%;
+    margin: 5%;
+    height: 9em;
+    width: 9em;
+}
+
+.in-circle {
+    height: 70%;
+    width: 70%;
+    padding: 15%;
+}
+
+.circlelink {
+    padding-left: 10%;
+    padding-right: 30%;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
+    font-size: 0.5em;
+    text-transform: uppercase;
+    color: gray;
+    letter-spacing: 0.1em;
+}
+
+.circle-link {
+}
+
+button {
+    background-color: white; /* Green */
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    letter-spacing: 0.4em;
+    border: none;
+    color: #a8d5e2;
+    border: 2pt solid #a8d5e2;
+    padding: 15px;
+    text-align: center;
+    display: inline-block;
+    height: 10%;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%:
+}
+
+button:hover{
+    background-color: #a8d5e2;
+    color: white;
+    border: none;
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+}
+
+.footer {
+    margin-top: 10%;
+    height: 200px;
+    background-color: #a8d5e2;
+    width: 100%;
+    float: left;
 }
